--- a/devops/devcontainer/Jenkinsfile
+++ b/devops/devcontainer/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
                 echo 'Starting to build docker image'
 
                 script {
-                    def customImage = docker.build("devcontainer:latest")
+                    def dev_image = docker.build("devcontainer:latest", "-f devops/devcontainer/Dockerfile")
                     // customImage.push()
                 }
             }
