Update instructions + docker k8s-kind deployment

--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -1,17 +1,32 @@
-CONTEXT ?= docker-desktop
-NAMESPACE ?= examples
-TAG ?= latest
+HOST ?= localhost
+NAMESPACE ?= nameko
+CONTEXT ?= kind-$(NAMESPACE)
+TAG ?= dev
 
 # all in one
-undeployK8:
-	$(MAKE) delete-namespace
-	$(MAKE) undeploy-ingress
+kind-create-cluster:
+	kind create cluster --config kind-config.yaml --name $(NAMESPACE)
+	kind export kubeconfig --name $(NAMESPACE)
+	NEWURL=$$(kubectl config view | grep -B1 'name: $(CONTEXT)' | grep server: | awk '{print $$2}' | sed -e 's/0.0.0.0/$(HOST)/') ; \
+		kubectl config set-cluster $(CONTEXT) --server=$${NEWURL} --insecure-skip-tls-verify=true 
 
-deployK8:
-	$(MAKE) init-helm
+# src: https://kind.sigs.k8s.io/docs/user/ingress/
+kind-setup-ingress:
+	kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+	sleep 5
+	kubectl wait --namespace ingress-nginx \
+		--for=condition=ready pod \
+		--selector=app.kubernetes.io/component=controller \
+		--timeout=90s
+
+undeployK8:
+	# $(MAKE) delete-namespace
+	kind delete cluster --name $(NAMESPACE)
+
+deployK8: kind-create-cluster kind-setup-ingress
+	# $(MAKE) init-helm
 	$(MAKE) create-namespace
 	$(MAKE) deploy-dependencies
-	$(MAKE) deploy-ingress
 	$(MAKE) install-charts
 
 # test
@@ -22,15 +37,28 @@ perf-test:
 	cd ..; ./test/nex-bzt.sh http://localhost
 
 # kubectl short-cuts
-
 get-nodes:
 	kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get nodes
 
+get-services:
+	kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get services -o wide
+
 get-pods:
-	kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get pods
+	kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get pods -o wide
+
+watch-svcs-pods:
+	watch -n 0 \
+	'kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get services -o wide; echo "---"; \
+	 kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) get pods -o wide'
 
 get-logs:
-	kubectl get pods --context=$(CONTEXT) --namespace $(NAMESPACE) --no-headers=true | awk '{print $$1}' | grep $(NAME) | xargs kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) logs -f
+	kubectl get pods --context=$(CONTEXT) --namespace $(NAMESPACE) --no-headers=true | awk '{print $$1}' | grep $(name) | xargs kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) logs -f
+
+describe-pod:
+	kubectl get pods --context=$(CONTEXT) --namespace $(NAMESPACE) --no-headers=true | awk '{print $$1}' | grep $(name) | xargs kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) describe pod
+
+describe-svc:
+	kubectl get services --context=$(CONTEXT) --namespace $(NAMESPACE) --no-headers=true | awk '{print $$1}' | grep $(name) | xargs kubectl --context=$(CONTEXT) --namespace $(NAMESPACE) describe service
 
 create-namespace:
 	kubectl --context=$(CONTEXT) apply -f namespace.yaml
@@ -39,10 +67,8 @@ delete-namespace:
 	kubectl --context=$(CONTEXT) delete -f namespace.yaml
 
 # helm
-
 init-helm:
 	helm repo add stable https://charts.helm.sh/stable
-	helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
 	helm repo update
 
 list-charts:
@@ -50,22 +76,19 @@ list-charts:
 
 deploy-dependencies:
 	helm upgrade broker stable/rabbitmq --install \
-	--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
+		--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
 	helm upgrade db stable/postgresql --install \
-	--set postgresqlDatabase=orders \
-	--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
+		--set postgresqlDatabase=orders \
+		--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
 	helm upgrade cache stable/redis --install \
-	--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
+		--namespace $(NAMESPACE) --kube-context=$(CONTEXT)
 	kubectl --context=$(CONTEXT) --namespace=$(NAMESPACE) get pods
-
-deploy-ingress:
-	helm upgrade ingress-nginx ingress-nginx/ingress-nginx --install
-
-undeploy-ingress:
-	kubectl get pods --namespace default --no-headers=true | awk '{print $$1}' | grep ingress-nginx | xargs kubectl --namespace default delete pod
 
 install-charts:
 	cd ..; $(MAKE) build
+	kind load docker-image $(NAMESPACE)/nameko-example-gateway:$(TAG) --name $(NAMESPACE)
+	kind load docker-image $(NAMESPACE)/nameko-example-orders:$(TAG) --name $(NAMESPACE)
+	kind load docker-image $(NAMESPACE)/nameko-example-products:$(TAG) --name $(NAMESPACE)
 	$(MAKE) SERVICE_NAME=gateway install-chart
 	$(MAKE) SERVICE_NAME=orders install-chart
 	$(MAKE) SERVICE_NAME=products install-chart
