--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,39 @@
-version: "2"
+version: "3.7"
 services:
   rabbit:
-    container_name: nameko-example-rabbitmq
+    container_name: ${PREFIX}-nameko-example-rabbitmq
     image: rabbitmq:3.7-management
-    ports:
-        - "15673:15672" # Exposing RabbitMQ web management on different port for convenience
-    restart: always
+    # ports:              # Uncomment both lines if you want to debug
+    #     - "15673:15672" # Exposing RabbitMQ web management on different port for convenience
+    restart: unless-stopped
+    healthcheck:
+      # test: ["CMD-SHELL", "nc -z localhost 5672"]
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   postgres:
-    container_name: nameko-example-postgres
+    container_name: ${PREFIX}-nameko-example-postgres
     image: postgres
-    ports:
-        - "5433:5432" # Exposing Postgres on different port for convenience
+    # ports:            # Uncomment both lines if you want to debug
+    #     - "5433:5432" # Exposing Postgres on different port for convenience
     environment:
         POSTGRES_DB: "orders"
         POSTGRES_PASSWORD: "password"
         POSTGRES_USER: "postgres"
-    restart: always
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
-    container_name: nameko-example-redis
+    container_name: ${PREFIX}-nameko-example-redis
     image: redis
-    ports:
-        - "6380:6379" # Exposing Redis on different port for convenience
+    # ports:            # Uncomment both lines if you want to debug
+    #     - "6380:6379" # Exposing Redis on different port for convenience
     command: [
       "bash", "-c",
       '
@@ -30,14 +41,21 @@ services:
        --requirepass password
       '
     ]
-    restart: always
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   orders:
-    container_name: nameko-example-orders
-    image: nameko/nameko-example-orders:dev
+    container_name: ${PREFIX}-nameko-example-orders
+    image: nameko/nameko-example-orders:${TAG}
     depends_on:
-      - rabbit
-      - postgres
+      rabbit:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     ports:
         - "8001:8000"
     links:
@@ -48,7 +66,6 @@ services:
         DB_USER: "postgres"
         DB_HOST: "postgres"
         DB_NAME: "orders"
-        POSTGRES_URI: postgresql://postgres:password@postgres:5432/orders
         RABBIT_PASSWORD: "guest"
         RABBIT_USER: "guest"
         RABBIT_HOST: "rabbit"
@@ -56,11 +73,13 @@ services:
         RABBIT_MANAGEMENT_PORT: "15672"
 
   products:
-    container_name: nameko-example-products
-    image: nameko/nameko-example-products:dev
+    container_name: ${PREFIX}-nameko-example-products
+    image: nameko/nameko-example-products:${TAG}
     depends_on:
-      - rabbit
-      - redis
+      rabbit:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
         - "8002:8000"
     links:
@@ -78,10 +97,11 @@ services:
         RABBIT_MANAGEMENT_PORT: "15672"
 
   gateway:
-    container_name: nameko-example-gateway
-    image: nameko/nameko-example-gateway:dev
+    container_name: ${PREFIX}-nameko-example-gateway
+    image: nameko/nameko-example-gateway:${TAG}
     depends_on:
-      - rabbit
+      rabbit:
+        condition: service_healthy
     ports:
         - "8003:8000"
     links:
