--- a/k8s/charts/gateway/templates/ingress.yaml
+++ b/k8s/charts/gateway/templates/ingress.yaml
@@ -1,13 +1,17 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}-ingress
   annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
   - http:
       paths:
-      - backend:
-          serviceName: {{ .Chart.Name }}
-          servicePort: {{ .Values.servicePort }}
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: {{ .Chart.Name }}-service
+            port:
+              number: {{ .Values.servicePort }}
