--- a/manifest.yml
+++ b/manifest.yml
@@ -1,21 +1,21 @@
 ---
 defaults: &defaults
   buildpacks:
-    - https://github.com/cloudfoundry/python-buildpack#v1.7.17
+    - python_buildpack
   memory: 2G
-  disk_quota: 4G
+  disk_quota: 2G
   health-check-type: process
   no-route: true
-  services:
-    - nex-rabbitmq
-    - nex-postgres
-    - nex-redis
+  # services:
+  #   - nex-rabbitmq
+  #   - nex-postgres
+  #   - nex-redis
   env:
     APP_ENV: HelloWorld
 
 # Majestic Monolith - All in One
 applications:
-  - name: nex-namekoexample
+  - name: nex-nameko-devex
     <<: *defaults
     no-route: false
     health-check-type: port
