--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -4,9 +4,11 @@ channels:
 dependencies:
 - openjdk=8.0
 - python=3.7
-- pip==20.0.2
+- pip==21
 - pip:
-    - nameko==v3.0.0-rc6
+    - nameko==v3.0.0-rc9
+    - fastapi==0.70.0
+    - uvicorn==0.15.0
     - marshmallow==2.19.2
     - psycopg2-binary==2.8.2
     - nameko-sqlalchemy==1.5.0
