Add proper clusterRPCClient conn pool

--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,5 @@ DB_URIS:
 REDIS_URI: ${REDIS_URI:"redis://localhost:6379/dev"}
 max_workers: ${MAX_WORKERS:5}
 WEB_SERVER_ADDRESS: 0.0.0.0:${PORT:8000}
+WEB_CONCURRENCY: ${MAX_WORKERS:5}
+PORT: ${PORT:8000}
