--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,9 @@ dependencies:
   - python=3.7
   - pip==20.0.2
   - pip:
-      - nameko==v3.0.0-rc6
+      - nameko==v3.0.0-rc9
+      - fastapi==0.70.0
+      - uvicorn==0.15.0
       - marshmallow==2.19.2
       - psycopg2-binary==2.8.2
       - nameko-sqlalchemy==1.5.0
